Fix footer white space

--- a/app/styles/components/common/c-footer.pcss
+++ b/app/styles/components/common/c-footer.pcss
@@ -2,10 +2,6 @@
   height: 100%;
   padding: 1rem 0;
 
-  > .column {
-    margin: 1rem 0;
-  }
-
   .secondary-menu {
     display: flex;
     flex-direction: column;
